--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -39,7 +39,9 @@
                         <a class="nav-link" href="/logout">Logout</a>
                     {% endif %}
                 {% endif %}
-                <a class="nav-link" href="/checkout">Checkout <span class="badge rounded-pill bg-light text-dark">{{ cart_items }} </span></a>
+                <a class="nav-link" href="/checkout">Checkout
+                    <span class="badge rounded-pill bg-light text-dark">{{ cart_items }} </span>
+                </a>
             </div>
         </div>
     </div>
